[project]
name = "cuda"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "nvidia-cutlass-dsl==4.3.0.dev0",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pyright]
typeCheckingMode = "basic"
